--- a/INTERFACE/templates/INTERFACE/data_display.html
+++ b/INTERFACE/templates/INTERFACE/data_display.html
@@ -5,7 +5,7 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-6 mx-auto text-center">
-            <h1 class="h1">We're off!</h1>
+            <h1 class="h1">We'll display the data here</h1>
         </div>
     </div>
 </div>
