--- a/INTERFACE/templates/INTERFACE/index.html
+++ b/INTERFACE/templates/INTERFACE/index.html
@@ -6,6 +6,7 @@
     <div class="row">
         <div class="col-6 mx-auto text-center">
             <h1 class="h1">We're off!</h1>
+            <h2 class="h2">This is the change</h2>
         </div>
     </div>
 </div>
