--- a/INTERFACE/templates/INTERFACE/data_display.html
+++ b/INTERFACE/templates/INTERFACE/data_display.html
@@ -9,6 +9,10 @@
         </div>
     </div>
 
+    {% for sample in samples %}
+      <p>{{sample.first_sample_aim}}</p>
+    {% endfor %}
+
     <table class="table my-5">
         <thead>
           <tr>
