Work on data display, use class based views for lists

--- a/templates/base.html
+++ b/templates/base.html
@@ -76,6 +76,10 @@
 
     {% block content %}
     {% endblock%}
+
+    <div id="bottom-space">
+
+    </div>
     
     <footer class="footer py-3 border border-black">
         <p class="m-0 text-center">Geology Database for all researchers</p>
