--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,3 +5,12 @@
     width: 100%;
     text-align: center;
   }
+
+#bottom-space {
+  height: 100px;
+}
+
+td {
+  height: 20px;
+  overflow: auto;
+}
