--- a/INTERFACE/templates/INTERFACE/index.html
+++ b/INTERFACE/templates/INTERFACE/index.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="row my-5">
-        <a class="mx-auto" href="{% url 'INTERFACE:data_display' %}">
+        <a class="mx-auto" href="{% url 'INTERFACE:sample_model' %}">
             <div class="col mx-auto">
                 <h2 class="h3">Access data</h2>
             </div>
