--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="{% url 'INTERFACE:data_display' %}">Data <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link active" href="{% url 'INTERFACE:sample_model' %}">Data <span class="sr-only">(current)</span></a>
               </div>
             </div>
           </nav>
