--- a/INTERFACE/templates/INTERFACE/fieldmissionsview_list.html
+++ b/INTERFACE/templates/INTERFACE/fieldmissionsview_list.html
@@ -10,7 +10,7 @@
   </div>
 
   <div class="row">
-    <div class="dropdown">
+    <div class="dropdown px-2">
       <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Models
       </button>
@@ -22,45 +22,47 @@
     </div>
     <div class="dropdown">
       <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Models
+        Views
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="{% url 'INTERFACE:geometry_columns_view' %}">Geometry Columns</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:field_missions_view' %}">Field Mission List View</a>
       </div>
     </div>
   </div>
 
-  {% for obj in page_obj %}
-    <div class="lead">{{ obj }}</div>
-  {% endfor %}
+  <table class="table table-striped my-5">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">mission_name</th>
+        <th scope="col">regional_place</th>
+        <th scope="col">start_date</th>
+        <th scope="col">end_date</th>
+        <th scope="col">stations_range</th>
+        <th scope="col">samples_range</th>
+        <th scope="col">participants</th>
+        <th scope="col">field_notebooks</th>
+        <th scope="col">associated_project</th>
 
-    <table class="table table-striped my-5">
-      <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">ID</th>
-          <th scope="col">Label</th>
-          <th scope="col">Definition</th>
-          <th scope="col">Source</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- {% for obj in page_obj %}
-        <tr>
-          <th scope="row">{{ forloop.counter }}</th>
-          <td>{{ obj.f_table_catalog }}</td>
-          <td>{{ obj.f_table_schema }}</td>
-          <td>{{ obj.f_table_name }}</td>
-          <td>{{ obj.f_geometry_column }}</td>
-          <td>{{ obj.coord_dimension }}</td>
-          <td>{{ obj.srid }}</td>
-          <td>{{ obj.type }}</td>
-
-        </tr>
-      {% endfor %} -->
-        
-      </tbody>
-    </table>
+      </tr>
+    </thead>
+    <tbody>
+      {% for obj in page_obj %}
+      <tr>
+      <th class="lead">{{ obj.mission_name }}</th>
+      <th class="lead">{{ obj.regional_place }}</th>
+      <th class="lead">{{ obj.start_date }}</th>
+      <th class="lead">{{ obj.end_date }}</th>
+      <th class="lead">{{ obj.stations_range }}</th>
+      <th class="lead">{{ obj.samples_range }}</th>
+      <th class="lead">{{ obj.participants }}</th>
+      <th class="lead">{{ obj.field_notebooks }}</th>
+      <th class="lead">{{ obj.associated_project }}</th>
+    </tr>
+    {% endfor %}
+      
+    </tbody>
+  </table>
 
     <div class="pagination">
       <span class="step-links">
