--- a/INTERFACE/templates/INTERFACE/samples_list.html
+++ b/INTERFACE/templates/INTERFACE/samples_list.html
@@ -22,10 +22,10 @@
     </div>
     <div class="dropdown">
       <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Models
+        Views
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="{% url 'INTERFACE:geometry_columns_view' %}">Geometry Columns</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:field_missions_view' %}">Geometry Columns</a>
       </div>
     </div>
   </div>
