--- a/INTERFACE/templates/INTERFACE/contactsview_list.html
+++ b/INTERFACE/templates/INTERFACE/contactsview_list.html
@@ -25,8 +25,18 @@
         Views
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="{% url 'INTERFACE:field_missions_view' %}">Field Mission List View</a>
-        <a class="dropdown-item" href="{% url 'INTERFACE:formation_view' %}">Formation View</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:field_missions_view' %}">Field Missions</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:analysis_ar_ar_view' %}">Analysis AR/AR</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:analysis_fission_tracks_view' %}">Analysis Fission Tracks</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:contacts_view' %}">Contacts</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:analysis_UHe_view' %}">Analysis U/HE</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:lithology_description_view' %}">Lithology Description</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:location_view' %}">Location</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:measurements_lines_view' %}">Measurement Lines</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:measurements_planes_view' %}">Measurement Planes</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:missions_view' %}">Missions</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:sample_sections_view' %}">Sample Sections</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:samples_view' %}">Samples</a>
       </div>
     </div>
   </div>
@@ -35,10 +45,14 @@
     <thead>
       <tr>
         <th scope="col">#</th>
-        <th scope="col">formation_full_name</th>
-        <th scope="col">detailled_description</th>
-        <th scope="col">latest_age_or_highest_stage</th>
-        <th scope="col">earliest_age_or_lowest_stage</th>
+        <th scope="col">location_id</th>
+        <th scope="col">contact_type</th>
+        <th scope="col">associated_lithologic_observation_1</th>
+        <th scope="col">associated_lithologic_observation_2</th>
+        <th scope="col">associated_measured_plane_id</th>
+        <th scope="col">contact_type_remarks</th>
+        <th scope="col">observation_determined_by</th>
+        <th scope="col">observation_date</th>
       </tr>
     </thead>
     
@@ -46,10 +60,14 @@
       {% for obj in page_obj %}
       <tr>
         <th class="lead">{{ forloop.counter }}</th>
-        <th class="lead">{{ obj.formation_full_name }}</th>
-        <th class="lead">{{ obj.detailled_description }}</th>
-        <th class="lead">{{ obj.latest_age_or_highest_stage }}</th>
-        <th class="lead">{{ obj.earliest_age_or_lowest_stage }}</th>
+        <th class="lead">{{ obj.location_id }}</th>
+        <th class="lead">{{ obj.contact_type }}</th>
+        <th class="lead">{{ obj.associated_lithologic_observation_1 }}</th>
+        <th class="lead">{{ obj.associated_lithologic_observation_2 }}</th>
+        <th class="lead">{{ obj.associated_measured_plane_id }}</th>
+        <th class="lead">{{ obj.contact_type_remarks }}</th>
+        <th class="lead">{{ obj.observation_determined_by }}</th>
+        <th class="lead">{{ obj.observation_date }}</th>
       </tr>
     {% endfor %}
       
