--- a/INTERFACE/templates/INTERFACE/lexiconfossils_list.html
+++ b/INTERFACE/templates/INTERFACE/lexiconfossils_list.html
@@ -24,7 +24,18 @@
         Views
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="{% url 'INTERFACE:field_missions_view' %}">Field Mission List View</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:field_missions_view' %}">Field Missions</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:analysis_ar_ar_view' %}">Analysis AR/AR</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:analysis_fission_tracks_view' %}">Analysis Fission Tracks</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:contacts_view' %}">Contacts</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:analysis_UHe_view' %}">Analysis U/HE</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:lithology_description_view' %}">Lithology Description</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:location_view' %}">Location</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:measurements_lines_view' %}">Measurement Lines</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:measurements_planes_view' %}">Measurement Planes</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:missions_view' %}">Missions</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:sample_sections_view' %}">Sample Sections</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:samples_view' %}">Samples</a>
       </div>
     </div>
   </div>
