--- a/INTERFACE/templates/INTERFACE/missionsview_list.html
+++ b/INTERFACE/templates/INTERFACE/missionsview_list.html
@@ -25,8 +25,18 @@
         Views
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="{% url 'INTERFACE:field_missions_view' %}">Field Mission List View</a>
-        <a class="dropdown-item" href="{% url 'INTERFACE:formation_view' %}">Formation View</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:field_missions_view' %}">Field Missions</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:analysis_ar_ar_view' %}">Analysis AR/AR</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:analysis_fission_tracks_view' %}">Analysis Fission Tracks</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:contacts_view' %}">Contacts</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:analysis_UHe_view' %}">Analysis U/HE</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:lithology_description_view' %}">Lithology Description</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:location_view' %}">Location</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:measurements_lines_view' %}">Measurement Lines</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:measurements_planes_view' %}">Measurement Planes</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:missions_view' %}">Missions</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:sample_sections_view' %}">Sample Sections</a>
+        <a class="dropdown-item" href="{% url 'INTERFACE:samples_view' %}">Samples</a>
       </div>
     </div>
   </div>
@@ -35,10 +45,15 @@
     <thead>
       <tr>
         <th scope="col">#</th>
-        <th scope="col">formation_full_name</th>
-        <th scope="col">detailled_description</th>
-        <th scope="col">latest_age_or_highest_stage</th>
-        <th scope="col">earliest_age_or_lowest_stage</th>
+        <th scope="col">mission_detailled_name</th>
+        <th scope="col">regional_place</th>
+        <th scope="col">start_date_yyyy_mm_dd_field</th>
+        <th scope="col">end_date_yyyy_mm_dd_field</th>
+        <th scope="col">stations_range</th>
+        <th scope="col">samples_range</th>
+        <th scope="col">participants</th>
+        <th scope="col">associated_field_notebooks</th>
+        <th scope="col">associated_project</th>
       </tr>
     </thead>
     
@@ -46,10 +61,15 @@
       {% for obj in page_obj %}
       <tr>
         <th class="lead">{{ forloop.counter }}</th>
-        <th class="lead">{{ obj.formation_full_name }}</th>
-        <th class="lead">{{ obj.detailled_description }}</th>
-        <th class="lead">{{ obj.latest_age_or_highest_stage }}</th>
-        <th class="lead">{{ obj.earliest_age_or_lowest_stage }}</th>
+        <th class="lead">{{ obj.mission_detailled_name }}</th>
+        <th class="lead">{{ obj.regional_place }}</th>
+        <th class="lead">{{ obj.start_date_yyyy_mm_dd_field }}</th>
+        <th class="lead">{{ obj.end_date_yyyy_mm_dd_field }}</th>
+        <th class="lead">{{ obj.stations_range }}</th>
+        <th class="lead">{{ obj.samples_range }}</th>
+        <th class="lead">{{ obj.participants }}</th>
+        <th class="lead">{{ obj.associated_field_notebooks }}</th>
+        <th class="lead">{{ obj.associated_project }}</th>
       </tr>
     {% endfor %}
       
